[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/background1.png" type="Texture" id=1]
[ext_resource path="res://prefabs/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://prefabs/qbit.tscn" type="PackedScene" id=3]
[ext_resource path="res://prefabs/EnemyBody.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Stage1.gd" type="Script" id=5]
[ext_resource path="res://prefabs/death Platform.tscn" type="PackedScene" id=6]
[ext_resource path="res://prefabs/death Particles.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sun.png" type="Texture" id=8]
[ext_resource path="res://prefabs/scene checker.tscn" type="PackedScene" id=9]
[ext_resource path="res://prefabs/flag.tscn" type="PackedScene" id=10]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2420.25, 25 )

[sub_resource type="CubeMesh" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 222.75, 36 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 38, 106.75 )

[node name="Stage1" type="Node2D"]
script = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 2200, 0 )

[node name="Background1" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 493, 370 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Background2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 4594, 365 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 1, 0 )

[node name="Sun" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 1389, -121 )
texture = ExtResource( 8 )

[node name="ground" type="StaticBody2D" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="ground"]
position = Vector2( 2022.5, 621.998 )
rotation = 3.14159
scale = Vector2( 2422, -25 )
mesh = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground"]
position = Vector2( 2019.75, 622 )
shape = SubResource( 2 )

[node name="MeshInstance2D2" type="MeshInstance2D" parent="ground"]
position = Vector2( 5103, 565.036 )
scale = Vector2( -218.466, 33.0262 )
mesh = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ground"]
position = Vector2( 5105.25, 564 )
shape = SubResource( 6 )

[node name="MeshInstance2D3" type="MeshInstance2D" parent="ground"]
position = Vector2( 6526.47, 479.026 )
scale = Vector2( -218.466, 33.0262 )
mesh = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="ground"]
position = Vector2( 6528.72, 477.99 )
shape = SubResource( 6 )

[node name="MeshInstance2D4" type="MeshInstance2D" parent="ground"]
position = Vector2( 5747.47, 308.026 )
scale = Vector2( -218.466, 33.0262 )
mesh = SubResource( 5 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="ground"]
position = Vector2( 5749.72, 306.99 )
shape = SubResource( 6 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( -99, 283 )

[node name="qbit" parent="Player" instance=ExtResource( 3 )]
position = Vector2( -188, -354 )

[node name="EnemyBody" parent="." instance=ExtResource( 4 )]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -318.0
margin_top = 8.0
margin_right = 5.0
margin_bottom = 57.0
rect_scale = Vector2( 3, 3 )
custom_colors/default_color = Color( 0, 0.403922, 0.52549, 1 )
text = "Hello, Fellow Traveller! Roll The Dice To Change The Outcome. You Must Get To The Flag! Oh No! That Enemy Is Going To Kill Schrodinger. "

[node name="death Particles" parent="." instance=ExtResource( 7 )]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 1400, 535 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 35, -6 )
shape = SubResource( 4 )

[node name="death Platform" parent="." instance=ExtResource( 6 )]

[node name="scene checker" parent="." instance=ExtResource( 9 )]

[node name="flag" parent="." instance=ExtResource( 10 )]
position = Vector2( 3755, -161 )

[connection signal="die_live" from="." to="Player" method="_on_Stage1_die_live"]
[connection signal="invoke_die" from="." to="Player" method="_on_Stage1_invoke_die"]
[connection signal="live" from="." to="Player" method="_on_Stage1_live"]
[connection signal="live_die" from="." to="Player" method="_on_Stage1_live_die"]
[connection signal="state_is_0" from="Player/qbit" to="." method="_on_qbit_state_is_0"]
[connection signal="state_is_1" from="Player/qbit" to="." method="_on_qbit_state_is_1"]
[connection signal="state_is_2" from="Player/qbit" to="." method="_on_qbit_state_is_2"]
[connection signal="state_is_3" from="Player/qbit" to="." method="_on_qbit_state_is_3"]
[connection signal="body_entered" from="Area2D" to="Player" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="death Platform" to="." method="_on_death_Platform_body_entered"]
